--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
       <div class="container-chat" id="chat">
       </div>
       <div class="container-input">
-        <input type="text" id="text" value="">
-        <input type="button" value="Send" onclick="send()">
+        <form action="">
+          <input type="text" id="text" value="">
+          <input type="submit" value="Send" onclick="send(); return false;">
+        </form>
       </div>
     </div>
   </body>
